--- a/03-joins.Rmd
+++ b/03-joins.Rmd
@@ -7,10 +7,11 @@ O pacote `dplyr` fornece uma família de funções para trabalhar com 'joins' no
 Primeiro, temos que ter claro que iremos fazer a operação com duas tabelas e deixar claro quem é a tabela 1 (esquerda) e a tabela 2 (direita). A tabela 1 normalmente é nossa referencia e a partir dela iremos buscar algumas ou todas informações da tabela 2 a partir de pontos em comum. Veja no esquema abaixo as 4 principais que envolvem 'joins'.
 
 ![](https://mikoontz.github.io/data-carpentry-week/img/dplyr-joins.png)
+```{r, message=FALSE, warning=FALSE}
+library(tidyverse)
+```
 
 ```{r}
-library(tidyverse)
-
 set.seed(12345)
 
 x <- tibble(
@@ -24,6 +25,14 @@ y <- tibble(
   valor3 = sample(20:30, 4)
 )
 ```
+```{r}
+x
+```
+
+```{r}
+y
+```
+
 
 Com base na tabela `x`, traga os valores da tabela `y` que correspondam com as chaves que existem na tabela `x`. Notem que a tabela 1 é o objeto `x` e eu quero ele como referencia.
 
@@ -41,7 +50,8 @@ Agora, considerando apenas o que tem em comum nas duas tabelas e depois o juntan
 
 ```{r}
 inner_join(x, y)
-
+```
+```{r}
 full_join(x, y)
 ```
 
@@ -49,6 +59,8 @@ Vimos até agora os 'joins' que movimentam colunas de uma tabela para outra, mas
 
 ```{r}
 semi_join(x, y)
-
+```
+```{r}
 anti_join(x, y)
 ```
+
